# conllup-py

./: .gitignore  README.md  pyproject.toml  setup.cfg
benchmarks/: README.md  bench.py  bench_conllu.py  bench_conllup.py  bench_pyconll.py  data.py  requirements.txt
src/conllup/: conllup.py  processing.py  types.py
src/conllup.egg-info/: PKG-INFO  SOURCES.txt
tests/: conllup_test.py  processing_test.py
tests/data/: contains_multiple_errors.conllu  english.conllu
