[metadata]
name = conllup
version = 0.1.0: conllup.VERSION
author = Kirian GUILLER
author_email = kirianguiller@gmail.com
description = Convert CONLLU to/from JSON format 
long_description = file: README.md, license.txt
keywords = CONLLU, JSON, arborator
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests*